read me filled, code clean up