@@ -1,8 +1,10 @@
 package com.thiadmar.smartmeter.repository;
 
+import com.google.common.collect.Iterables;
 import com.thiadmar.smartmeter.model.ElecReading;
 import com.thiadmar.smartmeter.model.GasReading;
 import com.thiadmar.smartmeter.model.Reading;
+import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 import org.junit.runner.RunWith;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -10,12 +12,9 @@ import org.springframework.boot.test.autoconfigure.orm.jpa.DataJpaTest;
 import org.springframework.test.context.junit4.SpringRunner;
 
 import java.time.Instant;
-import java.util.Arrays;
 import java.util.Date;
 import java.util.List;
 import java.util.Optional;
-
-import static org.assertj.core.api.Assertions.assertThat;
 
 @RunWith(SpringRunner.class)
 @DataJpaTest
@@ -28,17 +27,17 @@ class ReadingRepositoryTest {
     private static final Date testDate = Date.from(Instant.EPOCH);
     private static final GasReading gasReading = new GasReading(1L, 2L, 3L, testDate, reading);
     private static final ElecReading elecReading = new ElecReading(1L, 2L, 3L, testDate, reading);
-    private static final List<GasReading> gasReadings = Arrays.asList(gasReading);
-    private static final List<ElecReading> elecReadings = Arrays.asList(elecReading);
+    private static final List<GasReading> gasReadings = List.of(gasReading);
+    private static final List<ElecReading> elecReadings = List.of(elecReading);
 
     @Test
-    void should_create_new_reading() {
+    public void should_create_new_reading() {
         reading.setGasReadings(gasReadings);
         reading.setElecReadings(elecReadings);
         readingRepository.save(reading);
 
         Optional<Reading> readingById = readingRepository.findById(123L);
-        assertThat(readingById.isPresent());
+        Assertions.assertTrue(readingById.isPresent());
     }
 
     @Test
@@ -48,7 +47,13 @@ class ReadingRepositoryTest {
         readingRepository.save(reading);
 
         Iterable<Reading> readings = readingRepository.findAll();
-        assertThat(readings).hasSize(1);
+        Assertions.assertEquals(Iterables.size(readings), 1);
+    }
+
+    @Test
+    void can_not_find_reading() {
+        Optional<Reading> readingById = readingRepository.findById(123L);
+        Assertions.assertTrue(readingById.isEmpty());
     }
 
     @Test
@@ -59,7 +64,7 @@ class ReadingRepositoryTest {
         readingRepository.delete(reading);
 
         Iterable<Reading> readings = readingRepository.findAll();
-        assertThat(readings).hasSize(0);
+        Assertions.assertEquals(Iterables.size(readings), 0);
     }
 
 }
